--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="row text-center justify-content-center mb-5">
                 <div class="col-12">
                     <div class="top-text">
-                        <h2 data-aos="fade-down" data-aos-offset="100" data-aos-duration="1500" class="aos-init aos-animate">Porque nos escolher?
+                        <h2 data-aos="fade-down" data-aos-offset="100" data-aos-duration="1500" class="aos-init aos-animate">Why Choose us?
                         </h2>
                         <p data-aos="fade-down" data-aos-offset="100" data-aos-duration="1000" class="aos-init aos-animate">We offer the best experience at a fair price.
                             Combining the best quality at the lowest price. </p>
