--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         </li>
                     </ul>
                     <div class="d-lg-flex d-block">
-                        <a onclick="change_nav(3)" href="https://discord.gg/R5rjKaMkpn" class="button nav-btn d-flex justify-content-center align-items-center mt-md-0 mt-2 mb-md-0 mb-2 ml-4">DISCORD</a>
+                        <a onclick="change_nav(3)" href="https://discord.gg/n67ey7aFgK" class="button nav-btn d-flex justify-content-center align-items-center mt-md-0 mt-2 mb-md-0 mb-2 ml-4">DISCORD</a>
                     </div>
                 </div>
             </nav>
@@ -72,7 +72,7 @@
                         <span class="span-off">A quality bypass for you</span><span class="typed-cursor" aria-hidden="true">|</span><span class="typed-cursor" aria-hidden="true">|</span><span class="typed-cursor" aria-hidden="true">|</span>
                         <h1>Das<span style="color: var(--primary)">Bypass</span><br> It's easier with <span style="color: var(--primary)">a Das</span></h1>
                         <p>Are you looking for an innovative bypass? </p>
-                        <a href="https://discord.gg/R5rjKaMkpn" class="button rounded-circle">Get it now on our Discord</a>
+                        <a href="https://discord.gg/n67ey7aFgK" class="button rounded-circle">Get it now on our Discord</a>
                         <a href="#0" onclick="change_nav(2)" class="button read">Know More</a>
                     </div>
         </div>
@@ -220,7 +220,7 @@
                                     <span>$15.00
                                 </span></div>
                                 <p>Best value for money on the market</p>
-                                <a href="https://discord.gg/R5rjKaMkpn" class="button rounded-circle">Purchase!</a>
+                                <a href="https://discord.gg/n67ey7aFgK" class="button rounded-circle">Purchase!</a>
                                 <a href="#" class="button features">Get it right now!</a>
                             </div>
                         </div>
@@ -254,7 +254,7 @@
                                     <span>$50.00
                                 </span></div>
                                 <p>Best value for money on the market</p>
-                                <a href="https://discord.gg/R5rjKaMkpn" class="button rounded-circle">Purchase!</a>
+                                <a href="https://discord.gg/n67ey7aFgK" class="button rounded-circle">Purchase!</a>
                                 <a href="#" class="button features">Get it right now!</a>
                             </div>
                         </div>
@@ -321,7 +321,7 @@
                 <div class="col-12">
                     <h2 data-aos="fade" data-aos-duration="600" class="aos-init aos-animate">Looking for us?</h2>
                     <p data-aos="fade" data-aos-duration="600" class="aos-init aos-animate">Here is the best way to communicate.</p>
-                    <a data-aos="fade" data-aos-duration="600" href="https://discord.gg/R5rjKaMkpn
+                    <a data-aos="fade" data-aos-duration="600" href="https://discord.gg/n67ey7aFgK
                     " class="button rounded-circle px-5 aos-init aos-animate">Discord</a>
                 </div>
             </div>
@@ -350,9 +350,9 @@
                             <li><a onclick="change_nav(5)" href="#contacts">Contact</a></li>
                         </ul>
                         <ul>
-                            <li><a href="https://discord.gg/R5rjKaMkpn">Terms of service</a></li>
-                            <li><a href="https://discord.gg/R5rjKaMkpn">Features</a></li>
-                            <li><a href="https://discord.gg/R5rjKaMkpn">Discord</a></li>
+                            <li><a href="https://discord.gg/n67ey7aFgK">Terms of service</a></li>
+                            <li><a href="https://discord.gg/n67ey7aFgK">Features</a></li>
+                            <li><a href="https://discord.gg/n67ey7aFgK">Discord</a></li>
                         </ul>
                     </div>
                 </div>
